# A2A_exploration

./: CLAUDE.md  main.py  pyproject.toml
agents/: a2a_healthcare_agent.py  a2a_policy_agent.py  a2a_provider_agent.py  a2a_research_agent.py  agents.py  policy_agent_executor.py
examples/: agent_card.json
