[project]
name = "a2a-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.24",
    "anthropic>=0.84.0",
    "beeai-framework>=0.1.78",
    "dotenv>=0.9.9",
    "google-adk>=1.26.0",
    "langchain>=1.2.10",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "mcp>=1.26.0",
    "uvicorn>=0.41.0",
]
